Fix spacing and Google Maps issues

--- a/src/styles/Custom.css
+++ b/src/styles/Custom.css
@@ -143,7 +143,7 @@ background-position: center;
     padding: 0;
 }
 .key-themes-section , .speakers-section{
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 .key-themes-section {
     padding: 2rem 0;
